// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-breadcrumbs #render should render component as expected (1) 1`] = `
<gux-breadcrumbs>
  <template shadowrootmode="open">
    <nav aria-label="Breadcrumbs">
      <ol>
        <slot></slot>
      </ol>
    </nav>
  </template>
</gux-breadcrumbs>
`;

exports[`gux-breadcrumbs #render should render component as expected (2) 1`] = `
<gux-breadcrumbs>
  <template shadowrootmode="open">
    <nav aria-label="Breadcrumbs">
      <ol>
        <slot></slot>
      </ol>
    </nav>
  </template>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          <slot></slot>
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Category
  </gux-breadcrumb-item>
  <gux-breadcrumb-item href="#" role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <a class="gux-breadcrumb-content gux-link" href="#">
          <slot></slot>
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Parent
  </gux-breadcrumb-item>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <span aria-current="page" class="gux-active gux-breadcrumb-content">
          <slot></slot>
        </span>
      </span>
    </template>
    Current
  </gux-breadcrumb-item>
</gux-breadcrumbs>
`;

exports[`gux-breadcrumbs #render should render component as expected (3) 1`] = `
<gux-breadcrumbs>
  <template shadowrootmode="open">
    <nav aria-label="Breadcrumbs">
      <ol>
        <slot></slot>
      </ol>
    </nav>
  </template>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          <slot></slot>
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Category
  </gux-breadcrumb-item>
  <gux-breadcrumb-item href="#" role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <a class="gux-breadcrumb-content gux-link" href="#">
          <slot></slot>
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Parent
  </gux-breadcrumb-item>
  <gux-breadcrumb-item href="#" role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <span aria-current="page" class="gux-active gux-breadcrumb-content">
          <slot></slot>
        </span>
      </span>
    </template>
    Current
  </gux-breadcrumb-item>
</gux-breadcrumbs>
`;

exports[`gux-breadcrumbs #render should render component as expected (4) 1`] = `
<gux-breadcrumbs accent="primary">
  <template shadowrootmode="open">
    <nav aria-label="Breadcrumbs">
      <ol>
        <slot></slot>
      </ol>
    </nav>
  </template>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          <slot></slot>
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Category
  </gux-breadcrumb-item>
  <gux-breadcrumb-item href="#" role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <a class="gux-breadcrumb-content gux-link" href="#">
          <slot></slot>
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Parent
  </gux-breadcrumb-item>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-primary">
        <span aria-current="page" class="gux-active gux-breadcrumb-content">
          <slot></slot>
        </span>
      </span>
    </template>
    Current
  </gux-breadcrumb-item>
</gux-breadcrumbs>
`;

exports[`gux-breadcrumbs #render should render component as expected (5) 1`] = `
<gux-breadcrumbs accent="secondary">
  <template shadowrootmode="open">
    <nav aria-label="Breadcrumbs">
      <ol>
        <slot></slot>
      </ol>
    </nav>
  </template>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-secondary">
        <span class="gux-breadcrumb-content">
          <slot></slot>
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Category
  </gux-breadcrumb-item>
  <gux-breadcrumb-item href="#" role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-secondary">
        <a class="gux-breadcrumb-content gux-link" href="#">
          <slot></slot>
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Parent
  </gux-breadcrumb-item>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-secondary">
        <span aria-current="page" class="gux-active gux-breadcrumb-content">
          <slot></slot>
        </span>
      </span>
    </template>
    Current
  </gux-breadcrumb-item>
</gux-breadcrumbs>
`;

exports[`gux-breadcrumbs #render should render component as expected (6) 1`] = `
<gux-breadcrumbs accent="invalid">
  <template shadowrootmode="open">
    <nav aria-label="Breadcrumbs">
      <ol>
        <slot></slot>
      </ol>
    </nav>
  </template>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-invalid">
        <span class="gux-breadcrumb-content">
          <slot></slot>
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Category
  </gux-breadcrumb-item>
  <gux-breadcrumb-item href="#" role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-invalid">
        <a class="gux-breadcrumb-content gux-link" href="#">
          <slot></slot>
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </template>
    Parent
  </gux-breadcrumb-item>
  <gux-breadcrumb-item role="listitem">
    <template shadowrootmode="open">
      <span class="gux-breadcrumb-generation gux-invalid">
        <span aria-current="page" class="gux-active gux-breadcrumb-content">
          <slot></slot>
        </span>
      </span>
    </template>
    Current
  </gux-breadcrumb-item>
</gux-breadcrumbs>
`;
